# multi_model_stock_predictor

./: .gitignore  CLAUDE.md  README.md  README_CN.md  config.yaml  main.py  pyproject.toml
data/: 000001_daily_qfq_8y.csv  000063_daily_qfq_8y.csv  600031_daily_qfq_8y.csv  600519_daily_qfq_8y.csv  601857_daily_qfq_8y.csv
src/stock_predict/: __init__.py  base_models.py  config_loader.py  config_multi.py  core.py  data_preprocessor.py  evaluation.py  lstm_model.py  model_registry.py  prediction.py  transformer_model.py  visualization.py
